# capidocs

./: .gitignore  README.md  pyproject.toml
docs/: README.md  conf.py  index.rst  pyproject.toml  readthedocs.yaml  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/capibara_model/: combinations.doctree  main.doctree  train.doctree
docs/_build/doctrees/capibara_model/ONNX_conversion/: build_model.doctree  convert_to_tflite.doctree  model_definition.doctree  optimize_model.doctree
docs/_build/doctrees/capibara_model/_deployment/: deployer.doctree  (+1 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/capibara_model/: combinations.html  main.html  train.html
docs/capibara_model/: combinations.rst  main.rst  pyproject.toml  setup.py  train.rst
docs/capibara_model/_deployment/: docker_manager.rst
docs/capibara_model/core/: config.rst  inference.rst  model.rst
docs/capibara_model/data/: data_loader.rst  dataset.rst
docs/capibara_model/layers/: MetaLa.rst  bitnet.rst  bitnet_quatizer.rst  sparse_mamba.rst  sythetic_embedding.rst
docs/capibara_model/modules/: capibara_tts.rst  coherence_detector.rst  contextual_activation.rst  ethics_module.rst
docs/capibara_model/sub_models/: capibara2.rst  capibara_byte.rst  capibara_jax_ssm.rst  deep_dialog.rst  liquid.rst  spike_ssm.rst
docs/capibara_model/tests/: conftest.rst
docs/capibara_model/utils/: generate_response.rst
(+103 files in other folders)
