[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capibara-model"
version = "1.2.3"
description = "A State Space and Mamba-based language model framework"
readme = "README.md"
authors = [
    { name = "Marco Durán", email = "marco@anachroni.co" }
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.13",
    "flax",
    "optax",
    "tensorflow>=2.13",
    "wandb",
    "numpy>=1.20",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capibaraGPT"
version = "1.1.3"
dependencies = []